--- a/index.html
+++ b/index.html
@@ -4,54 +4,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<div class=" jumbotron ">
-            <link rel="stylesheet " href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css
-        " integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO " crossorigin="anonymous ">
-              <initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
-        crossorigin="anonymous"></script>
-    <title>Reservations</title>
+            <link rel=" stylesheet " href=" https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css
+        " integrity=" sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO " crossorigin="
+        anonymous">
+    <initial-scale=1.0">
+        </initial-scale>
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
+            crossorigin="anonymous"></script>
+        <title>Reservations</title>
 </head>
 
 <body>
-    <div class = "container">
-        
-    <div class="jumbotron">
-        <h1 class="text-center">Restaurante Caliente!</h1>
-        <p class="lead">Bienvenidos a nuestros Restaurante! Nuestros locaion estas circa de el norte de Northwest Lower FiDi </p>
-        <hr> 
-        <h2 class="text-center">Current Reservations and Waiting List</h2>
-        <p>Haga tu Reservacion por favor!</p>
-    </div>
-    <br>
-    <div class = "text center">
-        <a href="/reserve"></a>
-        <a href="/"></a>
-    </div>
-    <div class="row">
-    </div>
+    <div class="container">
+
+        <div class="jumbotron">
+            <h1 class="text-center">Restaurante Caliente!</h1>
+            <p class="lead">Bienvenidos a nuestros Restaurante! Nuestros locaion estas circa de el norte de Northwest
+                Lower FiDi </p>
+            <hr>
+            <h2 class="text-center">Current Reservations and Waiting List</h2>
+            <p>Haga tu Reservacion por favor!</p>
+        </div>
+        <br>
+        <div class="text center">
+            <a href="/reserve"></a>
+            <a href="/"></a>
+        </div>
+        <div class="row">
+        </div>
     </div>
 
 
-    <h4.panel-title></h4>
-    <div#tableSection.panelbody> 
-    <div.panel-title>
-            <div.panel heading>
-                <button type="button" class="btn btn-primary btn-lg">View Tables</button>
-                <button type="button" class="btn btn-secondary btn-lg">Home</button>
-                <h4 class="panel title"></h4>
-                <div.panel-panel></div>
-            </div>
-    </div>
-    </div>
-    </div>
-    <div class = "text center"></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
+    <h4.panel-title>
+        </h4>
+        <div#tableSection.panelbody>
+            <div.panel-title>
+                <div.panel heading>
+                    <button type="button" class="btn btn-primary btn-lg">View Tables</button>
+                    <button type="button" class="btn btn-secondary btn-lg">Home</button>
+                    <h4 class="panel title"></h4>
+                    <div.panel-panel>
+                        </div>
+                        </div>
+                        </div>
+                        </div>
+                        </div>
+                        <div class="text center"></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
 
 </body>
 
