--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div class="container">
         <div class="jumbotron">
-            <h1 class="text-center"><span class="glyphicon glyphicon-fire"></span> Cephi's Caliente Resatante>
+            <h1 class="text-center"><span class="glyphicon glyphicon-fire"></span> Cefi's Restaurante Caliente
                 <hr>
                 <h2 class="text-center">Current Reservations and Waiting List</h2>
                 <br>
@@ -37,34 +37,5 @@
                 </div>
         </div>
 
-        <div class="row">
-            <div class="col-lg-12">
-
-                <!-- Current Tables in Use
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h4 class="panel-title">Current Reservations</h4>
-                </div>
-                <div class="panel-body" id="tableSection">
-                </div>
-            </div> -->
-
-
-                <!-- <Waiting List Panel
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h4 class="panel-title">Waiting List</h4>
-                </div>
-        </div>
-
-                <footer class="footer">
-                    <div class="container">
-                        <p>Control Panel</p>
-                        <p><a href="#" id="clear">Clear Table</a> | <a href="/api/tables">API Table Link</a> | <a href="/api/waitlist">API
-                                Wait List</a></p>
-                    </div>
-                </footer>
-
-            </div>
-
+    </div>
 </body>
